# idataapi-transform

./: .gitignore  LICENSE  README.md  README_CN.md  README_CN_simple.md  __init__.py  cli.py  pyproject.toml  requirements.txt
DataProcess/Config/: LogConfig.py
DataProcess/Config/ConfigUtil/: BaseConfig.py  GetterConfig.py  WriterConfig.py
DataProcess/DataGetter/: APIGetter.py  BaseGetter.py  ESGetter.py  XLSXGetter.py
DataProcess/DataWriter/: ESWriter.py  TXTWriter.py
idataapi_transform/: __init__.py  cli.py  pyproject.toml  rm_pyc.sh
idataapi_transform/DataProcess/: ProcessFactory.py
idataapi_transform/DataProcess/Config/: ConnectorConfig.py  DefaultValue.py  ESConfig.py  LogConfig.py  MainConfig.py
idataapi_transform/DataProcess/Config/ConfigUtil/: AsyncHelper.py  (+2 more)
idataapi_transform/DataProcess/DataGetter/: APIGetter.py  CSVGetter.py  ESGetter.py  JsonGetter.py  MongoGetter.py  MySQLGetter.py  RedisGetter.py  XLSXGetter.py
idataapi_transform/DataProcess/DataWriter/: CSVWriter.py  ESWriter.py  JsonWriter.py  KafkaWriter.py  MongoWriter.py  MySQLWriter.py  RedisWriter.py  XLSXWriter.py
idataapi_transform/DataProcess/Meta/: BaseDataProcess.py
transform/: cli.py
transform/DataProcess/: ProcessFactory.py
transform/DataProcess/Config/: DefaultValue.py  LogConfig.py  MainConfig.py
transform/DataProcess/DataGetter/: CSVGetter.py  JsonGetter.py  MongoGetter.py  MySQLGetter.py
transform/DataProcess/DataWriter/: BaseWriter.py  CSVWriter.py  ESWriter.py  MongoWriter.py  MySQLWriter.py  XLSXWriter.py
transform/DataProcess/PersistentUtil/: PersistentWriter.py
