[build-system]
requires=["flit"]
build-backend="flit.buildapi"

[tool.flit.metadata]
module="transform"
author="zpoint"
author-email="zp@zp0int.com"
home-page="https://github.com/zpoint"
classifiers=["License :: OSI Approved :: MIT License"]
requires=["aiohttp", "openpyxl", "elasticsearch-async", "aioredis"]
requires-python=">=3.5.2"
keywords="transform"
dist-name="transform"

[tool.flit.scripts]
transform="transform:main"
