[build-system]
requires=["flit"]
build-backend="flit.buildapi"

[tool.flit.metadata]
module="idataapi_transform"
author="zpoint"
author-email="zp0int@qq.com"
home-page="https://github.com/zpoint/idataapi-transform"
classifiers=["License :: OSI Approved :: MIT License"]
requires=["aiohttp", "openpyxl", "elasticsearch-async", "aioredis", "confluent_kafka"]
requires-python=">=3.5.2"
keywords="idataapi transform"
dist-name="idataapi-transform"

[tool.flit.scripts]
transform="idataapi_transform:main"
