[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="idataapi_transform"
author="zpoint"
author-email="zp0int@qq.com"
home-page="https://github.com/zpoint/idataapi-transform"
classifiers=["License :: OSI Approved :: MIT License"]
requires=["aiohttp", "openpyxl", "elasticsearch-async", "aioredis", "confluent_kafka"]
requires-python=">=3.5.2"
keywords="idataapi transform"
dist-name="idataapi-transform"

[tool.flit.scripts]
transform="idataapi_transform:main"
